examples/datalog/15_arithmetic/20_unary_operations.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_unary
Knowledge graph 'test_unary' created.
Switched to knowledge graph: test_unary
> .kg use test_unary
Switched to knowledge graph: test_unary
> +nums[(5,), (10,), (-3,)].
Inserted 3 fact(s) into 'nums'.
> negated(X, Y) :- nums(X), Y = 0 - X.
Script error: Parse error: Invalid term: '0 - X'
